[project]
name = "dicomplot"
# version = "0.1.0"  # handled by setuptools_scm
description = "A brief description of what your project does"
authors = [
    { name = "Niels Bassler", email = "nbassler@users.noreply.github.com" },
]
dependencies = [
    "pydicom>=2.3.1",
    "matplotlib>=3.4.3",
    "numpy>=1.21.2",
    "PyQt6>=6.0",        # Add this line for QtAgg
]
license = { text = "MIT" }
readme = "README.md"
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "flake8>=6.0.0",
    "pep8-naming>=0.12.1",
    "mypy>=0.971",
    "black>=22.3.0",
    "yapf>=0.32.0",
    "pytest>=7.2.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"

log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"


[tool.flake8]
max-line-length = 127

[tool.yapf]
based_on_style = "pep8"
column_limit = 127

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
write_to = "dicomplot/__version__.py"
